# bachata_vibes_qdrant

./: .gitignore  ANNOTATIONS.md  MUSIC_ANALYSIS_RESULTS.md  README.md
bachata-choreography-generator/: .env.example  ANNOTATION_FRAMEWORK_SUMMARY.md  CHOREOGRAPHY_GENERATOR_GUIDE.md  FASTAPI_README.md  MOVE_ANALYZER_IMPLEMENTATION.md  OPTIMIZED_PIPELINE_DOCUMENTATION.md  README.md  README_OPTIMIZED_PIPELINE.md  TASK_4_4_IMPLEMENTATION_SUMMARY.md  TASK_4_5_IMPLEMENTATION_SUMMARY.md  TASK_4_6_IMPLEMENTATION_SUMMARY.md  all_songs_analysis.json  analyze_all_songs_summary.py  create_bachata_choreography.py  enhanced_analysis_results.json  generate_choreography.py  main.py  migrate_to_qdrant_cloud.py  migrate_to_superlinked_qdrant.py  optimized_choreography_generator.py  pyproject.toml  recreate_collection.py  run_validation.py  setup_annotation_framework.py  setup_optimized_pipeline.py  setup_qdrant.py  setup_uv_environment.py  start_server.py  update_qdrant_indexes.py
bachata-choreography-generator/app/: __init__.py  exceptions.py  validation.py
bachata-choreography-generator/data/: annotation_instructions.md  annotation_template.csv  bachata_annotations.json  demo_export.csv  organization_report.md  validation_report.md
bachata-choreography-generator/tests/: test_annotation_framework.py  test_choreography_optimizer.py  test_cloud_deployment_validation.py  test_cloud_migration_complete.py  test_complete_pipeline.py  test_feature_fusion.py  test_feature_fusion_system.py  test_hyperparameter_optimizer.py  test_model_validation.py  test_move_analyzer.py  test_youtube.py  (+15 more)
(+80 files in other folders)
