[project]
name = "bachata-choreography-generator"
version = "0.1.0"
description = "AI-powered Bachata choreography generator that creates dance sequences from YouTube music"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "yt-dlp>=2023.11.16",
    "librosa>=0.10.1",
    "mediapipe>=0.10.7",
    "qdrant-client>=1.6.9",
    "opencv-python>=4.8.1.78",
    "numpy>=1.24.3",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "tqdm>=4.66.0",
    "scipy>=1.11.0",
]
