[project]
name = "bachata-choreography-generator"
version = "0.1.0"
description = "AI-powered Bachata choreography generator that creates dance sequences from YouTube music"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "yt-dlp>=2023.1.0",
    "librosa>=0.9.0",
    "mediapipe>=0.8.0",
    "qdrant-client>=1.0.0",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "pydantic>=1.8.0",
    "httpx>=0.25.0",
    "tqdm>=4.62.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "psutil>=5.8.0",
    "superlinked>=37.2.2",
    "sentence-transformers>=5.1.0",
    "scikit-learn>=1.7.2",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
]
